# BlackSheep-CLI

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: build.yml
blacksheepcli/cli/: main.py
blacksheepcli/common/: __init__.py  cookiemod.py  cookiemonkey.py  prompts.py
blacksheepcli/create/: cli.py  domain.py
blacksheepcli/templates/: cli.py  domain.py
blacksheepcli/templates/data/: default.py
tests/: conftest.py  test_templates.py
