[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blacksheep-cli"
version = "0.0.4"
authors = [{ name = "Roberto Prevato", email = "roberto.prevato@gmail.com" }]
description = "ðŸ› ï¸ CLI to bootstrap BlackSheep projects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "blacksheep",
    "CLI",
    "developer experience",
    "projects scaffolding",
    "project templates",
]

dependencies = [
    "tomli; python_version < '3.11'",
    "python-dotenv~=1.0.0",
    "click",
    "rich-click",
    "essentials-configuration[full]",
    "cookiecutter",
    "questionary",
    "pathvalidate==3.0.0",
]

[project.scripts]
blacksheep = "blacksheepcli.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["blacksheepcli"]

[tool.hatch.build.targets.sdist]
exclude = ["tests"]

[tool.hatch.build]
only-packages = true

[project.urls]
"Homepage" = "https://github.com/Neoteroi/BlackSheep-CLI"
"Bug Tracker" = "https://github.com/Neoteroi/BlackSheep-CLI/issues"
